gcc/testsuite/treelang/compile/badreturn.tree
// { dg-do compile }

external_definition void bar ();
external_definition int gar (int arg0);

bar
{
	return 0; // { dg-warning "return" }
}

gar
{
	return; // { dg-error "return" }
}
